@@ -5,11 +5,10 @@
 
 struct lua_State;
 
-
-class LuaSyncedCtrl {
+class LuaSyncedCtrl
+{
 	public:
 		static bool PushEntries(lua_State* L);
-
 		static void CheckAllowGameChanges(lua_State* L);
 
 	private:
@@ -32,6 +31,10 @@ class LuaSyncedCtrl {
 
 		static int CallCOBScript(lua_State* L);
 		static int GetCOBScriptID(lua_State* L);
+
+		static int SetUnitRulesParam(lua_State* L);
+		static int SetTeamRulesParam(lua_State* L);
+		static int SetGameRulesParam(lua_State* L);
 
 		static int GiveOrderToUnit(lua_State* L);
 		static int GiveOrderToUnitMap(lua_State* L);
